--- a/docker/Dockerfile.backend
+++ b/docker/Dockerfile.backend
@@ -8,17 +8,14 @@ COPY package.json ./
 # Installer les dépendances
 RUN npm install
 
-# Copier le schéma Prisma
-COPY prisma ./prisma
-
-# Générer le client Prisma
-RUN npx prisma generate
-
-# Copier le code backend
+# Copier le code backend (inclut prisma)
 COPY src/ ./src/
 
+# Générer le client Prisma
+RUN npx prisma generate --schema=./src/prisma/schema.prisma
+
 # Créer le dossier pour les migrations
-RUN mkdir -p prisma/migrations
+RUN mkdir -p src/prisma/migrations
 
 # Exposer le port
 EXPOSE 3000
