--- a/docker/Dockerfile.backend
+++ b/docker/Dockerfile.backend
@@ -2,6 +2,9 @@ FROM node:18-alpine
 
 WORKDIR /app
 
+# Installer OpenSSL et autres dépendances nécessaires pour Prisma
+RUN apk add --no-cache openssl libc6-compat
+
 # Copier les fichiers de dépendances (package.json est à la racine)
 COPY package.json ./
 
